Small updates to fix warnings. Updated how we grab random numbers to be thread safe.